3-deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx-example
  rules:
    - host: web-1.myexample.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myexample-web
                port:
                  number: 80
